# front-end-training-project

./: Cargo.toml  README.md  index.html  main.js
src/: app.rs  appinit.rs  event_bus.rs  event_bus_account.rs  event_bus_two.rs  lib.rs
src/pages/: details.rs  function_component.rs  home.rs  mod.rs  producer.rs  producertwo.rs  rustdom.rs  subscriber.rs  subscriber_account.rs  subscribertwo.rs
src/pages/yewdux/: dispatch_component.rs  dispatch_props.rs  mod.rs  reducer_component.rs  reducer_global.rs  store_component.rs  store_global.rs
src/store/: mod.rs  reducer.rs  store.rs
