[package]
name = "front-end-training-project"
version = "0.1.0"
authors = ["hackerrank <me@hackerrank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew="0.18"
yew-router = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
yewdux = "^0.6"
yewtil = "^0.4.0"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]